[gd_scene load_steps=2 format=3 uid="uid://b8nfm2slyjqej"]

[ext_resource type="Script" uid="uid://bwjxhau1hp3p8" path="res://editor/scenes/dialogues/track_editor/note_editor.gd" id="1"]

[node name="NoteEditor" type="PanelContainer"]
custom_minimum_size = Vector2(0, 60)
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NoteLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "C4"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="KeyLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Key:"

[node name="KeySpinBox" type="SpinBox" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 127.0
value = 60.0

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="StartLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Start:"

[node name="StartDeltaSpinBox" type="SpinBox" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="DurationLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Duration:"

[node name="DurationSpinBox" type="SpinBox" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 10.0
step = 0.1
value = 0.5

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "X"
